# espia-jogos

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  busca_usuario.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg  usuarios.py
.github/workflows/: pytest.yml  ruff.yml
espia_jogos/: api.py  front.py  ludopedia.py  main.py  scraper.py  usuarios.py
scripts/: popula_thumbs.py
src/espia_jogos/: ludopedia.py  main.py  usuarios.py
tests/: test_commands.py
