[metadata]
name = EspiaJogos
version = 1.0.0
author = Augusto Vanderley, Dyego Soares
author_email = your@email.com
description = Projetinho pra espiar as coleçoes de jogos dos amigos

[options]
packages=find:
package_dir=
    =src
install_requires =
    ipython
    ipdb
    requests
    python-dotenv
    click

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    espia = espia_jogos.main:main


[flake8]
max-line-length = 88